# CoffeCalc

./: CMakeLists.txt  Coffeemachine.cpp  Coffeemachine.h  README.md
